Bug 162343 - Slow .svg file opening
Summary: Slow .svg file opening
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, haveBacktrace, perf, regression
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2024-08-04 16:38 UTC by Telesto
Modified: 2025-03-19 06:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Perf flamegraph (955.94 KB, image/svg+xml)
2024-08-04 18:44 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-08-04 16:38:32 UTC
Description:
Slow file opening

Steps to Reproduce:
1. Open attachment 163305 [details] (bug 134975)


Actual Results:
Opening takes +/- 45 seconds 

Expected Results:
7 seconds with 



Reproducible: Always


User Profile Reset: No

Additional Info:
Slow with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 055c906d7b3f2e3709292d1410358d4e66a500ed
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

Fine with
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Buovjaga 2024-08-04 18:43:35 UTC
Bibisected with linux-64-24.2 repo to 2c3f731992a294d4f35b41193af034fe9a6dd65c
tdf#157663 SW: reenable move recognition improvements

$ git checkout 49ef8016d62bc07dd626114cd2ac66879d79eaf9 && time OOO_EXIT_POST_STARTUP=1 SAL_USE_VCLPLUGIN=gtk3 instdir/program/soffice --norestore ~/libobugs/vboxshare/1212121.odt
Previous HEAD position was ee17813a source e123c772db8a12a37dfa14370b9db7c220f33ef1
HEAD is now at 49ef8016 source 2c3f731992a294d4f35b41193af034fe9a6dd65c

real    0m27,447s
user    0m26,322s
sys     0m1,021s

$ git checkout HEAD~1 && time OOO_EXIT_POST_STARTUP=1 SAL_USE_VCLPLUGIN=gtk3 instdir/program/soffice --norestore ~/libobugs/vboxshare/1212121.odt
Previous HEAD position was 49ef8016 source 2c3f731992a294d4f35b41193af034fe9a6dd65c
HEAD is now at ee17813a source e123c772db8a12a37dfa14370b9db7c220f33ef1

real    0m3,434s
user    0m3,212s
sys     0m0,198s
Comment 2 Buovjaga 2024-08-04 18:44:35 UTC
Created attachment 195700 [details]
Perf flamegraph

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5850b22e04a7a055e5b4c6b23a1d32d74270506d
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 Bogaboga Man 2024-08-04 18:56:57 UTC
It takes about 11 seconds to open if the file is converted to a `.docx' file in this environment.

Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: bffef4ea93e59bebbeaf7f431bb02b1a39ee8a59
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-CA (en_CA); UI: en-GB
Calc: CL threaded
Comment 4 Noel Grandin 2025-03-18 18:09:02 UTC
Noting that (from what I see in the performance profile) the problem here is to do with redlines not svg.
Comment 5 Commit Notification 2025-03-18 19:42:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e3bf8e0f58355d1460d190bd0b7751f133934573

tdf#162343 speedup redline document

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2025-03-19 06:23:02 UTC
Ok, now it's better:
real    0m9,446s
user    0m8,160s
sys     0m0,457s

As the commit mentioned in comment 1 was about correctness, this is acceptable.