tdf#162343 speedup redline document

we spend a lot of time searching for changes by calling GetTextOfArea.

Speed that up by avoiding intermediate OUString and OUStringBuffer
creation.

Takes load time from 19 sec to 4 sec for me.

Change-Id: Iae124d3668ddb874ddf12e209348c1f696e5549b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183101
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>